dom/quota/ActorsParent.cpp
@@ -2396,7 +2396,8 @@ Result<bool, nsresult> EnsureDirectory(nsIFile& aDirectory) {
                  QM_OR_ELSE_LOG_VERBOSE_IF(
                      // Expression.
                      MOZ_TO_RESULT_INVOKE(aDirectory, Create,
-                                          nsIFile::DIRECTORY_TYPE, 0755)
+                                          nsIFile::DIRECTORY_TYPE, 0755,
+                                          /* aSkipAncestors = */ false)
                          .map([](Ok) { return false; }),
                      // Predicate.
                      IsSpecificError<NS_ERROR_FILE_ALREADY_EXISTS>,
